[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/PlayerMovement_2D platformer.gd" type="Script" id=1]
[ext_resource path="res://Assets/crow.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 0.0

[sub_resource type="RayShape2D" id=3]
length = 40.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 9 )

[node name="Player" type="KinematicBody2D" groups=["PLAYER_GROUP"]]
collision_layer = 7
collision_mask = 7
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
flip_h = true

[node name="StandingCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SlidingCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 2 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="GunShape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="ShootStartPoint" type="Position2D" parent="GunShape"]

[node name="DropThroughCheck" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropThroughCheck"]
position = Vector2( 1, 24 )
shape = SubResource( 4 )

[connection signal="body_entered" from="DropThroughCheck" to="." method="_on_DropThroughCheck_body_entered"]
[connection signal="body_exited" from="DropThroughCheck" to="." method="_on_DropThroughCheck_body_exited"]
